# Howard-Claw

./: .gitignore  BUILD_INSTRUCTIONS.md  HOWARD_CLAUDE_CODE_HANDOFF.md  README.md  gradle.properties  howard-complete-apk  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  howard_jni.cpp
app/src/main/java/au/howardagent/: HowardApplication.kt  MainActivity.kt
app/src/main/java/au/howardagent/agent/: CommandDispatcher.kt  PromptBuilder.kt  SystemPrompts.kt  ToolExecutor.kt
app/src/main/java/au/howardagent/connectors/: OpenClawConnector.kt  TelegramConnector.kt
app/src/main/java/au/howardagent/data/: HowardDatabase.kt  SecurePrefs.kt
app/src/main/java/au/howardagent/download/: DeviceDetector.kt  ModelDownloader.kt  ModelRegistry.kt
app/src/main/java/au/howardagent/engine/: CloudEngine.kt  EngineRouter.kt  InferenceEngine.kt  LocalEngine.kt
app/src/main/java/au/howardagent/service/: BootReceiver.kt  BootstrapInstaller.kt  GatewayService.kt  InferenceService.kt
app/src/main/java/au/howardagent/ui/chat/: ChatScreen.kt  (+1 more)
app/src/main/res/drawable/: ic_howard_notif.xml  ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
archive/: howard-complete-apk.jsx
docs/: AGENT_INSTRUCTIONS.md  ANDROID_FEASIBILITY.md  ARCHITECTURE.md  DECISIONS.md  PROJECT_VISION.md  ROADMAP.md  SETUP_PLAN.md  TARGET_HARDWARE.md  TROUBLESHOOTING.md
gradle/: libs.versions.toml
scripts/: build_apk.sh  bundle_assets.sh  init_project.sh
(+10 files in other folders)
